Refresh endpoint added, Revoke all user session and single session added
