# backend/internal/modules/iam/dto/auth.go
@@ -16,3 +16,12 @@ type LoginResponseDTO struct {
 	AccessToken  string `json:"access_token"`
 	RefreshToken string `json:"refresh_token"`
 }
+
+type RefreshRequestDTO struct {
+	RefreshToken string `json:"refresh_token" binding:"required"`
+}
+
+type RefreshResponseDTO struct {
+	AccessToken  string `json:"access_token"`
+	RefreshToken string `json:"refresh_token"`
+}
