# backend/internal/modules/iam/route/iam_route.go
@@ -26,10 +26,16 @@ func RegisterIamRoutes(route *gin.RouterGroup, txm *database.TxManager, cfg *con
 	iamService := service.NewIAMService(txm, iamRepo, wsService, mail, cfg.AppBaseURL)
 	iamHandler := handler.NewIAMHandler(iamService)
 
+	// Unprotected auth routes
 	authRoutes := route.Group("auth")
 	authRoutes.POST("/register", iamHandler.Register)
 	authRoutes.POST("/login", iamHandler.Login)
-	authRoutes.GET("/me", middleware.Auth(), iamHandler.Me)
+	authRoutes.POST("/refresh", iamHandler.Refresh)
+
+	// Protected routes for user
+	userRoutes := authRoutes.Group("/")
+	userRoutes.Use(middleware.Auth())
+	userRoutes.GET("/me", iamHandler.Me)
 
 	// Define other IAM-related routes here (e.g., login, user management, etc.)
 }
